2003-05-15  Kevin Vandersloot <kfv101@psu.edu>

	* gweather-applet.c, gweather-pref.c: change wording for one of the prefs to make
	more understandable.

2003-05-14  Kevin Vandersloot <kfv101@psu.edu>

	* gweather-dialog.c: fix mispelling. Fixes bug #112970

2003-04-25  Dennis Cranston <dennis_cranston at yahoo com>

	*gweather-pref.c: Minor HIG changes to the preference dialog: 
	add missing mnemonic; add missing colon from label; add units 
	after spin controls; remove dialog separator, set the default 
	button; and fix widget padding.

2003-04-22  Kevin Vandersloot <kfv101@psu.edu>

	* gweather-pref.c: fix saving of update interval. Also limit minimun update interval
	to 30 min to save bandwidth

2003-03-25  Kevin Vandersloot <kfv101@psu.edu>

	* gweather-pref.c: update default location for server changes

2003-03-07  Mark McLoughlin  <mark@skynet.ie>

	* gweather-applet.c: (help_cb):
	* gweather-pref.c: (help_cb): update for screen-exec changes.

2003-02-20  Kevin Vandersloot <kfv101@psu.edu>

	* merge changes from gweather-improve branch. 

2003-02-20  Kevin Vandersloot <kfv101@psu.edu>

	* weather.c: funky animation for when an update occurs

2003-02-18  Kevin Vandersloot <kfv101@psu.edu>

	* location.c: cancel download of citites if new country is selected. Fixes a problem where
	the fist country is shown

	* gweather-applet.c: reoder high and low temps in tooltips

	* weather.c: change icon for one condition

2003-02-16  Kevin Vandersloot <kfv101@psu.edu>

	* gweather-dialog.c: add a label for feels like temp and pressure. Get
	some more metric conversions.

	* weather.c, weather.c, gweather.h: remove lots of unneeded stuff

	* location.c: fix crash if the dialog was closed durring an update 

	* gweather-applet.c: open forecast if applet double clicked

2003-02-13  Kevin Vandersloot <kfv101@psu.edu>

	* gweather-applet.c: add labels to display temps. 

	* gweather-dialog.c: don't display NULL if temp is not set
