@@ -1,3 +1,8 @@
+2003-05-07  Dennis Cranston <dennis_cranston at yahoo com>
+
+	* gweather-pref.c:  HIGify the action area of the preferences 
+	dialog.
+
 2003-05-15  Kevin Vandersloot <kfv101@psu.edu>
 
 	* gweather-applet.c, gweather-pref.c: change wording for one of the prefs to make
